--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@
   --pad: 16px;
   font-size: 24px;
   font-family: 'VT323', monospace;
+  user-select: none;
 }
 
 html, body {
@@ -85,4 +86,105 @@ body {
 
 #links li {
   margin: var(--pad) 0;
+}
+
+#container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+#terminal {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0;
+  z-index: -1;
+  transition: z-index 0s step-end 0.5s, opacity 0.5s linear;
+  box-sizing: border-box;
+  margin: calc(var(--pad) / -2);
+  padding: var(--pad);
+  overflow: auto;
+}
+
+#terminal::-webkit-scrollbar {
+  width: calc(var(--pad) / 2);
+  background-color: black;
+}
+
+#terminal::-webkit-scrollbar-thumb {
+  background-color: var(--fg-col);
+}
+
+#terminal.show {
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+  animation-name: showTerminal;
+}
+
+#terminal.hide {
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+  animation-name: hideTerminal;
+}
+
+@keyframes showTerminal {
+  0% {
+    z-index: -1;
+    opacity: 0;
+  }
+
+  1% {
+    z-index: 1;
+    opacity: 0;
+  }
+
+  100% {
+    z-index: 1;
+    opacity: 1;
+  }
+}
+
+@keyframes hideTerminal {
+  0% {
+    z-index: 1;
+    opacity: 1;
+  }
+
+  99% {
+    z-index: 1;
+    opacity: 0;
+  }
+
+  100% {
+    z-index: -1;
+    opacity: 0;
+  }
+}
+
+#log {
+  margin: 0;
+  padding: 0;
+  width: calc(100% - 2 * var(--pad));
+  color: var(--fg-col);
+}
+
+#lines {
+  margin:0;
+  padding-left:0;
+  list-style-type: none;
+}
+
+#caret {
+  animation: blink 1.2s steps(1) infinite;
+  color: var(--fg-col);
+  background-color: var(--fg-col);
+}
+
+@keyframes blink {
+  50% {
+    color: black;
+    background-color: black;
+  }
 }
