--- a/main.css
+++ b/main.css
@@ -1,8 +1,7 @@
 @font-face {
   font-family: 'VT323';
   font-style: normal;
-  font-weight: 400;
-  src: local('VT323 Regular'), local('VT323-Regular'), url(lo_L7yCDHYN9FAxvMCI1vQ.woff2) format('woff2');
+  src: url(VT323.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 
@@ -13,6 +12,7 @@
   font-size: 24px;
   font-family: 'VT323', monospace;
   user-select: none;
+  -moz-user-select: none;
 }
 
 html, body {
