--- a/main.css
+++ b/main.css
@@ -182,8 +182,10 @@ a {
   list-style-type: none;
 }
 
-#lines > li {
+#lines > li, #input {
   white-space: pre-wrap;
+  height: 30px;
+  line-height: 30px;
 }
 
 #caret {
